tests/errors/first_stage/.data/argument_expected/argument_expected.am
myData: .data 1, ,3, 4
